sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:6: error: not found: value v
      copie(i,v)
              ^AlgInsertionSort:7: error: not found: value v
      if (plusPetit(v,i-j)) {
                    ^